frontend/src/app/component/index.css
.centralContainer {
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.formContainer {
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
}

.siteHeaderSegment {
    background-color: rgb(0,12,84);
    padding-left: 5px;
    color: rgb(124,255,255);
    border-color: rgb(124,255,255);
    border-bottom: 5px solid rgb(124,255,255);
    border-radius: 0px;
}

.siteHeaderSegmentLight {
    background-color: rgb(255,255,255);
    padding-left: 5px;
    color: rgb(0, 128, 0);
    border-color: rgb(0, 128, 0);
    border-bottom: 5px solid rgb(0, 128, 0);
    border-radius: 0px;
}

.siteHeaderTitleItem {
    color: rgb(124,255,255);
    font-family: Helvetica Neue;
    font-size: 50px;
    font-weight: bold;
}

.siteHeaderTitleItemLight {
    color: rgb(0, 128, 0);
    font-family: Helvetica Neue;
    font-size: 50px;
    font-weight: bold;
}

.siteHeaderUserButton {
    background-color: rgb(0,12,84);
    color: rgb(124,255,255);
    padding-left: 8px;
    padding-right: 8px;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-left: 0.5em;
    border-color: rgb(124,255,255);
    border-width: 3px;
    border-radius: 5px;
    font-family: Helvetica Neue;
    font-size: 15px;
    font-weight: bold;
}

.siteHeaderUserButtonLight {
    background-color: rgb(255,255,255);
    color: rgb(0, 128, 0);
    padding-left: 8px;
    padding-right: 8px;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-left: 0.5em;
    border-color: rgb(0, 128, 0);
    border-width: 3px;
    border-radius: 5px;
    font-family: Helvetica Neue;
    font-size: 15px;
    font-weight: bold;
}

.siteHeaderUserButton:hover {
    background-color: rgb(64, 80, 140);
    color: rgb(124,255,255);
}

.sitePage {
    background-color: rgb(0,11,77);
    min-height: 100vh;
    color: rgb(124,255,255)
}

.sitePageLight {
    background-color: rgb(255, 255, 255);
    min-height: 100vh;
    color: rgb(0, 128, 0);
}

